updated some portfolio.html lines, added a temporary WIP page

--- a/portfolio.html
+++ b/portfolio.html
@@ -48,12 +48,12 @@
 		</section>
 	<section id="row2">
 			<section>
-				<a id="vs" href="ide3.html"><img class="quadra" src="ressources/visualcode.png"></a>
-				<h3>Visual Studio Code</h3>
+				<a id="vs" href="ressources/workinprogress/work-in-progress.html"><img class="quadra" src="ressources/workinprogress/ressources/wip.gif"></a>
+				<h3>En cours</h3>
 			</section>
 			<section>
-				<a id="lt" href="ide4.html"><img class="quadra" src="ressources/Lighttable.jpg"></a>
-				<h3>Light Table</h3>
+				<a id="lt" href="ressources/workinprogress/work-in-progress.html"><img class="quadra" src="ressources/workinprogress/ressources/wip.gif"></a>
+				<h3>En cours</h3>
 			</section>
 	</section></p>
 </main>
