--- a/projet2.html
+++ b/projet2.html
@@ -28,7 +28,7 @@
 		<h1>Présentation de IDE</h1>
 	</header>
 
-	<main>
+	<main class="container">
 		<section>
 			<img id="ide" src="ressources/ide/idegif.gif">
 			</section>
@@ -42,8 +42,8 @@
                         <li>Sites Web divers</li>
                     </ul>
                 </p>
-                <p>Il s'agit tout simplement d'une interface complète de connexion, inscription et de reset de mot de passe, possédant pour connexion et inscription un lien renvoyant l'un vers l'autre et un lien vers la page de reset de mot de passe. J'ai aussi pris un petit temps pur intégré une page dite Easter Egg pour quiquonque viendrai à cliquer sur le bouton d'envoi des données de formulaire. Il sera ammené par la suite à être amélioré.</p>
-                <p>C'était un travail en solo, il a donc été réalisé par mes soins. Mais non sans entraide! Merci à Pierre Malardier!</p>    
+                <p>Chaque page présente un IDE différent, dans un style minimaliste, mais chacune à un style et/ou mise en page différent.</p>
+                <p>C'était un travail en solo, il a donc été réalisé par mes soins. Mais non sans entraide! Merci à Gregory Fauvel!</p>    
                 <a href="https://github.com/keryann-maurin/ide"><input type="button" class="bouton" value="Lien vers le répertoire Github"></input></a>
 	</main>	
 	
